# agent-safe

./: .gitignore  CHANGELOG.md  CLAUDE.md  HOWTO.md  README.md  SECURITY.md  SPEC.md  component_map.yaml  constraints.yaml  prompt.md  schema_hints.yaml  sops.md  task.md  trust_policy.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  publish.yml  scorecard.yml
.kin/: code-map.json  config  index.json
.pact/: audit.jsonl  state.json
.pact/test-gen/: analysis.json  security_audit.md
cli/: README.md
cli/js/: package.json
cli/js/src/: index.ts
contracts/sdk_python_spl___main__/: interface.json  interface.py
contracts/sdk_python_spl_crypto/: interface.py
contracts/sdk_python_spl_crypto/history/: 20260315_185542.json
contracts/sdk_python_spl_evaluator/: interface.json  interface.py
contracts/sdk_python_spl_parser/: interface.json  interface.py
decomposition/: interview.json  tree.json
docs/: index.html
examples/crypto/: ed25519_vectors.json  generate_vectors.go  hashchain_vectors.json  merkle_vectors.json
examples/e2e/: e2e.go  e2e.py  e2e.ts  go.mod
examples/policies/: family_gifts.spl
examples/requests/: gift_50_niece.json
sdk/csharp/: AgentSafe.sln  README.md
sdk/csharp/AgentSafe.Spl/: AgentSafe.Spl.csproj  Crypto.cs  Env.cs  Evaluator.cs  Node.cs  Parser.cs  SplException.cs  Token.cs  Verifier.cs
sdk/csharp/AgentSafe.Spl.Tests/: AgentSafe.Spl.Tests.csproj  SplTests.cs
sdk/go/: README.md  go.mod
sdk/go/spl/: bench_test.go  crypto.go  crypto_test.go  eval.go  parser.go  spl_test.go  token.go
sdk/go/verify/: verify.go
sdk/java/: README.md  pom.xml
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/js/src/: bench.ts  crypto.test.ts  crypto.ts  index.ts  spl.test.ts  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/spl/: __init__.py  __main__.py  crypto.py  evaluator.py  parser.py  token.py  types.py  verifier.py
sdk/python/tests/: test_crypto.py  test_evaluator.py  test_gas.py  test_integration.py  test_parser.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: verify.rs
sdk/rust/src/: crypto.rs  evaluator.rs  lib.rs  parser.rs  token.rs  types.rs  verifier.rs
sdk/rust/tests/: integration.rs
tests/sdk_python_spl___main__/: contract_test.py  contract_test_suite.json
tests/sdk_python_spl_crypto/: contract_test.py  contract_test_suite.json
tests/sdk_python_spl_evaluator/: contract_test.py  contract_test_suite.json
tests/smoke/: test_sdk_python_spl___main__.py  test_sdk_python_spl_crypto.py  test_sdk_python_spl_evaluator.py  test_sdk_python_spl_parser.py  test_sdk_python_spl_token.py  test_sdk_python_spl_verifier.py
(+10 files in other folders)
