[package]
name = "agent-safe-spl"
version = "0.1.0"
edition = "2021"
description = "SPL (Safe Policy Lisp) evaluator for Agent-Safe capability tokens"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hex = "0.4"

[[example]]
name = "verify"
path = "examples/verify.rs"
