[package]
name = "agent-safe-spl"
version = "0.1.0"
edition = "2021"
description = "SPL (Safe Policy Lisp) evaluator for Agent-Safe capability tokens. 150 lines, zero deps core, microseconds."
license = "MIT"
repository = "https://github.com/jmcentire/agent-safe"
homepage = "https://jmcentire.github.io/agent-safe/"
keywords = ["agent", "authorization", "capability", "token", "policy"]
categories = ["authentication", "cryptography"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[[example]]
name = "verify"
path = "examples/verify.rs"
